Remove AffectedNodes API and add pagination to GetNodes API
